translated erpproject section

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -18,6 +18,31 @@
         { "value": "١ك+", "label": "مشتركين" },
         { "value": "٥+", "label": "عملاء" }
       ]
+    },
+
+    "erpProjects": {
+      "projects": [
+        {
+          "title": "لوحة تحليلات المبيعات",
+          "description": "لوحة تحليلات المبيعات هي أداة تحليلية متقدمة مصممة لتزويد الشركات ببيانات مبيعات شاملة في الوقت الفعلي.",
+          "image": "project_14.png"
+        },
+        {
+          "title": "تحليلات تحسين العملاء",
+          "description": "أداة تحليلات تحسين العملاء تمكن الشركات من الحصول على رؤى متعمقة حول تفاعل العملاء.",
+          "image": "project_15.png"
+        },
+        {
+          "title": "لوحة أداء الحملة",
+          "description": "تساعد لوحة أداء الحملة الشركات على مراقبة وتحسين حملاتها التسويقية.",
+          "image": "project_16.png"
+        },
+        {
+          "title": "تدفق تسجيل سلس",
+          "description": "تعمل عملية التسجيل السلسة على تبسيط وتحسين عملية التسجيل للمستخدمين الجدد.",
+          "image": "project_17.png"
+        }
+      ]
     }
   }
 }
