--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -18,6 +18,31 @@
         { "value": "1k+", "label": "購読者" },
         { "value": "5+", "label": "クライアント" }
       ]
+    },
+
+    "erpProjects": {
+      "projects": [
+        {
+          "title": "セールスインサイトダッシュボード",
+          "description": "セールスインサイトダッシュボードは、リアルタイムの販売データを提供する高度な分析ツールです。",
+          "image": "project_14.png"
+        },
+        {
+          "title": "クライアント最適化分析",
+          "description": "クライアント最適化分析ツールは、クライアントエンゲージメントの深い洞察を提供します。",
+          "image": "project_15.png"
+        },
+        {
+          "title": "キャンペーンパフォーマンスダッシュボード",
+          "description": "キャンペーンパフォーマンスダッシュボードは、マーケティングキャンペーンのモニタリングと最適化を支援します。",
+          "image": "project_16.png"
+        },
+        {
+          "title": "シームレスなオンボーディングワークフロー",
+          "description": "シームレスなオンボーディングワークフローは、新規ユーザーのためのオンボーディングプロセスを簡素化および強化します。",
+          "image": "project_17.png"
+        }
+      ]
     }
   }
 }
